src/qir/snapshots/hugr_qir__qir__random_ext__test__emit_random_codegen@llvm21_5.snap
---
source: src/qir/random_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal void @_hl.main.1({} %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  ret void
}
